CHANGES
0.10.14
- curly quotes in titles are straightened.
- store subtitle in a marc subfield

0.10.13 (December 26, 2022)
- load_from_pgheader now treats allows any plural metadata keywords. ending 's' of a keyword it stripped so that "Editors" is treated the same way "Editor" is.
- refactored and delinted DublinCore
- added tests for translator handling

0.10.10 (December 14, 2022)
- fix undefined variable in pub info handler
- matching of author names with the data base is now stricter - matches may not match partial names.
- delint DublinCore and DublinCoreMapping

0.10.9 (November 28, 2022)
- don't allow creators to be named ""
- fix tests so they don't break so easily when database is updated.

0.10.8 (October 23, 2022)
- dc.credit is doing double duty - it's storing update notices as well as production credits. so updates need to be more sophisticated - updates can be added, credits are fixed. This fixes a problem where credits pulled from the source file are not included in the credites metadata.

0.10.7 (October 7, 2022)
- tweak display of marc fields. "United States: D. Appleton and Company, 1918." instead of "United States :D. Appleton and Company ,1918."
- update tests
- make sure all scanned metadata is normal form composed.

0.10.5 (October 1, 2022)
- fixed bug in pubinfo.__str__ revealed by bugfix in ebookmaker renderer.

0.10.4 (September 30, 2022)
- don't skip last metadata item when it is followed immediately by the START marker
- add `produced by` as a synonym for `credit`
- add `self_closing` parameter to `GutenbergGlobals.insert_breaks()`
- dc.load_from_database() was not loading dc attributes corresponding to marc attributes Support for this has now been added.
- since dc.pubinfo is never False, dc.save() tried (in vain) to save empty pubinfos. No longer. 

0.10.3 (September 15, 2022)
- fix bug where list attributes to set were not checked for empty text items

0.10.2 (September 14, 2022)