@@ -21,6 +21,7 @@
         "CREDIT": "Roger Frank and Sue Clark.",
         "LANGUAGE": "English",
         "PUBLISHER": "Frank A. Munsey Company",
+        "PUBLISHER_PLACE": "New York, NY",
         "PUBLISHER_COUNTRY": "US",
         "SOURCE_PUBLICATION_YEARS": [
             "copyright:1920",
